# my-first-webserver-on-rocket

./: Cargo.toml
src/: async_graphql_rocket.rs  encoder.rs  main.rs
templates/: index.html.hbs
