[package]
name = "rocket-hello"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-dev"}
rocket_dyn_templates = {version = "0.1.0-rc.1", features = ["handlebars"]}
serde_json = "*"
async-graphql = "2.9.2"
futures = "0.3.1"
deflate = {version = "0.9.1", features = ["gzip"]}